# function-metrics

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  release-plz.toml
.githooks/: commit-msg
.github/workflows/: ci.yml  release-plz.yml
crates/function-metrics/: Cargo.toml
crates/function-metrics-macros/: Cargo.toml  LICENSE
crates/function-metrics-macros/src/: lib.rs
crates/function-metrics/src/: lib.rs
crates/function-metrics/tests/: function_metrics.rs  ui.rs
crates/function-metrics/tests/ui/fail/: classifier_without_errors.rs  classifier_without_errors.stderr  const_function.rs  const_function.stderr  duplicate_labels.rs  duplicate_labels.stderr  duplicate_metrics.rs  duplicate_metrics.stderr  empty_metrics.rs  empty_metrics.stderr  errors_non_result.rs  errors_non_result.stderr  impl_future.rs  impl_future.stderr  invalid_name.rs  invalid_name.stderr  reserved_label.rs  reserved_label.stderr  reserved_operation_suffix.rs  reserved_operation_suffix.stderr  track_caller.rs  track_caller.stderr  track_caller_outer.rs  track_caller_outer.stderr  tuple_field.rs  tuple_field.stderr  unknown_metric.rs  unknown_metric.stderr
crates/function-metrics/tests/ui/pass/: async_nested_impl_future.rs  borrowed_fields.rs  custom_future_trait.rs  deep_async_chain.rs  false_positive_future.rs  generated_identifier_collisions.rs  generic_method.rs
scripts/: check-conventional-commits.sh  package-facade.sh  verify-commit-message.sh
tests/renamed-dependency/: Cargo.toml
tests/renamed-dependency/src/: main.rs
