[package]
name = "function-metrics-macros"
description = "Procedural macros for function-metrics"
keywords = ["metrics", "prometheus", "instrumentation", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
